refactor: try to improve readability of agent example

--- a/examples/hello_agent.ipynb
+++ b/examples/hello_agent.ipynb
@@ -2,13 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yoptar/reps/DeepPavlov/venv/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n",
+      "[nltk_data] Downloading package punkt to /home/yoptar/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to /home/yoptar/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package perluniprops to\n",
+      "[nltk_data]     /home/yoptar/nltk_data...\n",
+      "[nltk_data]   Package perluniprops is already up-to-date!\n",
+      "[nltk_data] Downloading package nonbreaking_prefixes to\n",
+      "[nltk_data]     /home/yoptar/nltk_data...\n",
+      "[nltk_data]   Package nonbreaking_prefixes is already up-to-date!\n",
+      "2018-06-18 16:03:17.920 DEBUG in 'gensim.models.doc2vec'['doc2vec'] at line 73: Fast version of gensim.models.doc2vec is being used\n",
+      "2018-06-18 16:03:17.924 INFO in 'summa.preprocessing.cleaner'['textcleaner'] at line 20: 'pattern' package not found; tag filters are not available for English\n"
+     ]
+    }
+   ],
    "source": [
     "from deeppavlov.core.models.component import Component\n",
     "from deeppavlov.core.agent.agent import Agent\n",
-    "from deeppavlov.models.classifiers.vocab_intersection.vocab_intersection import VocabIntersection"
+    "from deeppavlov.models.classifiers.tokens_matcher.tokens_matcher import TokensMatcher"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleSkill(Component):\n",
+    "    @staticmethod\n",
+    "    def _confidence_fn(utterances_batch):\n",
+    "        return [1 for _ in utterances_batch]  # by default always be confident\n",
+    "    \n",
+    "    def __init__(self, response, confidence_fn=None, *args, **kwargs):\n",
+    "        self.response = response\n",
+    "        if confidence_fn is not None:\n",
+    "            self._confidence_fn = confidence_fn\n",
+    "    \n",
+    "    def __call__(self, utterances_batch, history_batch, states_batch, *args, **kwargs):\n",
+    "        tokens = [u.lower().split() for u in utterances_batch]\n",
+    "        return [self.response for _ in utterances_batch], self._confidence_fn(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello = SimpleSkill('Hello world!', confidence_fn=TokensMatcher([\"hi\", \"hello\", \"good day\"]))\n",
+    "bye = SimpleSkill('Good bye world!', confidence_fn=TokensMatcher([\"bye\", \"chao\", \"see you\"]))\n",
+    "other = SimpleSkill(\"I don't understand, sorry\")"
    ]
   },
   {
@@ -17,12 +71,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class OneLiner(Component):\n",
-    "    def __init__(self, line, *args, **kwargs):\n",
-    "        self.line = line\n",
+    "class CustomSelector(Component):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        pass\n",
     "    \n",
-    "    def __call__(self, batch, *args, **kwargs):\n",
-    "        return [(self.line, 1, None) for _ in batch]"
+    "    def __call__(self, utterances, batch_history, *responses):\n",
+    "        responses, confidences = zip(*[zip(*r) for r in responses])\n",
+    "        indexes = [c.index(max(c)) for c in zip(*confidences)]\n",
+    "        return [responses[i] for i, *responses in zip(indexes, *responses)]"
    ]
   },
   {
@@ -31,53 +87,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hello = OneLiner('Hello')\n",
-    "world = OneLiner('world')\n",
-    "other = OneLiner(\"I don't understand, sorry\")"
+    "agent = Agent([hello, bye, other], skills_selector=CustomSelector())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CustomSelector(Component):\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        self.f = [\n",
-    "            VocabIntersection([\"hi\", \"hello\", \"good day\"]),\n",
-    "            VocabIntersection([\"bye\", \"chao\", \"see you\"]),\n",
-    "            lambda batch: [1. for _ in batch]\n",
-    "        ]\n",
-    "    \n",
-    "    def __call__(self, utterances, batch_history, *responses):\n",
-    "        tokens = [u.lower().split() for u in utterances]\n",
-    "        confidences = [f(tokens) for f in self.f]\n",
-    "        indexes = [c.index(max(c)) for c in zip(*confidences)]\n",
-    "        return [responses[i][0] for i, *responses in zip(indexes, *responses)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent = Agent([hello, world, other], skills_selector=CustomSelector())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hello', 'world', \"I don't understand, sorry\"]"
+       "['Hello world!', 'Good bye world!', \"I don't understand, sorry\"]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
