chore: fix grammar in agent example

--- a/examples/hello_agent.ipynb
+++ b/examples/hello_agent.ipynb
@@ -22,8 +22,8 @@
       "[nltk_data] Downloading package nonbreaking_prefixes to\n",
       "[nltk_data]     /home/yoptar/nltk_data...\n",
       "[nltk_data]   Package nonbreaking_prefixes is already up-to-date!\n",
-      "2018-06-18 16:03:17.920 DEBUG in 'gensim.models.doc2vec'['doc2vec'] at line 73: Fast version of gensim.models.doc2vec is being used\n",
-      "2018-06-18 16:03:17.924 INFO in 'summa.preprocessing.cleaner'['textcleaner'] at line 20: 'pattern' package not found; tag filters are not available for English\n"
+      "2018-06-18 16:35:11.684 DEBUG in 'gensim.models.doc2vec'['doc2vec'] at line 73: Fast version of gensim.models.doc2vec is being used\n",
+      "2018-06-18 16:35:11.687 INFO in 'summa.preprocessing.cleaner'['textcleaner'] at line 20: 'pattern' package not found; tag filters are not available for English\n"
      ]
     }
    ],
@@ -41,17 +41,17 @@
    "source": [
     "class SimpleSkill(Component):\n",
     "    @staticmethod\n",
-    "    def _confidence_fn(utterances_batch):\n",
+    "    def _confidence(utterances_batch):\n",
     "        return [1 for _ in utterances_batch]  # by default always be confident\n",
     "    \n",
     "    def __init__(self, response, confidence_fn=None, *args, **kwargs):\n",
     "        self.response = response\n",
     "        if confidence_fn is not None:\n",
-    "            self._confidence_fn = confidence_fn\n",
+    "            self._confidence = confidence_fn\n",
     "    \n",
     "    def __call__(self, utterances_batch, history_batch, states_batch, *args, **kwargs):\n",
     "        tokens = [u.lower().split() for u in utterances_batch]\n",
-    "        return [self.response for _ in utterances_batch], self._confidence_fn(tokens)"
+    "        return [self.response for _ in utterances_batch], self._confidence(tokens)"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "hello = SimpleSkill('Hello world!', confidence_fn=TokensMatcher([\"hi\", \"hello\", \"good day\"]))\n",
-    "bye = SimpleSkill('Good bye world!', confidence_fn=TokensMatcher([\"bye\", \"chao\", \"see you\"]))\n",
+    "bye = SimpleSkill('Goodbye world!', confidence_fn=TokensMatcher([\"bye\", \"chao\", \"see you\"]))\n",
     "other = SimpleSkill(\"I don't understand, sorry\")"
    ]
   },
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "['Hello world!', 'Good bye world!', \"I don't understand, sorry\"]"
+       "['Hello world!', 'Goodbye world!', \"I don't understand, sorry\"]"
       ]
      },
      "execution_count": 6,
