chore: use HighestConfidenceSelector in agent example

--- a/examples/hello_agent.ipynb
+++ b/examples/hello_agent.ipynb
@@ -22,14 +22,13 @@
       "[nltk_data] Downloading package nonbreaking_prefixes to\n",
       "[nltk_data]     /home/yoptar/nltk_data...\n",
       "[nltk_data]   Package nonbreaking_prefixes is already up-to-date!\n",
-      "2018-06-18 16:35:11.684 DEBUG in 'gensim.models.doc2vec'['doc2vec'] at line 73: Fast version of gensim.models.doc2vec is being used\n",
-      "2018-06-18 16:35:11.687 INFO in 'summa.preprocessing.cleaner'['textcleaner'] at line 20: 'pattern' package not found; tag filters are not available for English\n"
+      "2018-06-18 17:12:48.935 DEBUG in 'gensim.models.doc2vec'['doc2vec'] at line 73: Fast version of gensim.models.doc2vec is being used\n",
+      "2018-06-18 17:12:48.938 INFO in 'summa.preprocessing.cleaner'['textcleaner'] at line 20: 'pattern' package not found; tag filters are not available for English\n"
      ]
     }
    ],
    "source": [
     "from deeppavlov.core.models.component import Component\n",
-    "from deeppavlov.core.agent.agent import Agent\n",
     "from deeppavlov.models.classifiers.tokens_matcher.tokens_matcher import TokensMatcher"
    ]
   },
@@ -71,28 +70,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CustomSelector(Component):\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        pass\n",
-    "    \n",
-    "    def __call__(self, utterances, batch_history, *responses):\n",
-    "        responses, confidences = zip(*[zip(*r) for r in responses])\n",
-    "        indexes = [c.index(max(c)) for c in zip(*confidences)]\n",
-    "        return [responses[i] for i, *responses in zip(indexes, *responses)]"
+    "from deeppavlov.core.agent.agent import Agent, HighestConfidenceSelector\n",
+    "\n",
+    "agent = Agent([hello, bye, other], skills_selector=HighestConfidenceSelector())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent = Agent([hello, bye, other], skills_selector=CustomSelector())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +86,7 @@
        "['Hello world!', 'Goodbye world!', \"I don't understand, sorry\"]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
