--- a/examples/hello_agent.ipynb
+++ b/examples/hello_agent.ipynb
@@ -22,8 +22,8 @@
       "[nltk_data] Downloading package nonbreaking_prefixes to\n",
       "[nltk_data]     /home/yoptar/nltk_data...\n",
       "[nltk_data]   Package nonbreaking_prefixes is already up-to-date!\n",
-      "2018-06-18 17:12:48.935 DEBUG in 'gensim.models.doc2vec'['doc2vec'] at line 73: Fast version of gensim.models.doc2vec is being used\n",
-      "2018-06-18 17:12:48.938 INFO in 'summa.preprocessing.cleaner'['textcleaner'] at line 20: 'pattern' package not found; tag filters are not available for English\n"
+      "2018-06-18 18:06:55.74 DEBUG in 'gensim.models.doc2vec'['doc2vec'] at line 73: Fast version of gensim.models.doc2vec is being used\n",
+      "2018-06-18 18:06:55.78 INFO in 'summa.preprocessing.cleaner'['textcleaner'] at line 20: 'pattern' package not found; tag filters are not available for English\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
     "        if confidence_fn is not None:\n",
     "            self._confidence = confidence_fn\n",
     "    \n",
-    "    def __call__(self, utterances_batch, history_batch, states_batch, *args, **kwargs):\n",
+    "    def __call__(self, utterances_batch, history_batch, states_batch):\n",
     "        tokens = [u.lower().split() for u in utterances_batch]\n",
     "        return [self.response for _ in utterances_batch], self._confidence(tokens)"
    ]
