--- a/examples/hello_agent.ipynb
+++ b/examples/hello_agent.ipynb
@@ -22,14 +22,14 @@
       "[nltk_data] Downloading package nonbreaking_prefixes to\n",
       "[nltk_data]     /home/yoptar/nltk_data...\n",
       "[nltk_data]   Package nonbreaking_prefixes is already up-to-date!\n",
-      "2018-06-18 18:06:55.74 DEBUG in 'gensim.models.doc2vec'['doc2vec'] at line 73: Fast version of gensim.models.doc2vec is being used\n",
-      "2018-06-18 18:06:55.78 INFO in 'summa.preprocessing.cleaner'['textcleaner'] at line 20: 'pattern' package not found; tag filters are not available for English\n"
+      "2018-06-19 11:59:42.389 DEBUG in 'gensim.models.doc2vec'['doc2vec'] at line 73: Fast version of gensim.models.doc2vec is being used\n",
+      "2018-06-19 11:59:42.392 INFO in 'summa.preprocessing.cleaner'['textcleaner'] at line 20: 'pattern' package not found; tag filters are not available for English\n"
      ]
     }
    ],
    "source": [
     "from deeppavlov.core.models.component import Component\n",
-    "from deeppavlov.models.classifiers.tokens_matcher.tokens_matcher import TokensMatcher"
+    "from deeppavlov.models.classifiers.tokens_matcher import TokensMatcher"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deeppavlov.core.agent.agent import Agent, HighestConfidenceSelector\n",
+    "from deeppavlov.core.agent import Agent, HighestConfidenceSelector\n",
     "\n",
     "agent = Agent([hello, bye, other], skills_selector=HighestConfidenceSelector())"
    ]
